sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:10: error: not found: value j
		if (!echange(j,j+1))
                             ^